--- a/frontend/service-manager/src/app/app.component.scss
+++ b/frontend/service-manager/src/app/app.component.scss
@@ -1,3 +1,47 @@
+
+.dashboard-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    background-color: #f0f0f0;
+  }
+  .dashboard-title {
+    font-size: 24px;
+    margin-bottom: 20px;
+    color: #333;
+  }
+  .dashboard-content {
+    font-size: 18px;
+    color: #555;
+    margin-bottom: 20px;
+    padding: 0 20px;
+    text-align: center;
+  }
+  .user-info {
+    background-color: #fff;
+    padding: 15px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+  .logout-button {
+    padding: 10px 20px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    transition: background-color 0.3s ease;
+  }
+  .logout-button:hover {
+    background-color: #0056b3;
+  }
+  .container {
+    margin-top: 1rem;
+  }
 table {
     width: 100%;
     border-collapse: collapse;
@@ -26,3 +70,27 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #ddd;
 }
+.menu-bar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center; 
+    background-color: #262525;
+    color: white;
+    padding: 10px 20px;
+    font-size: 18px; 
+    margin-bottom: 20px; 
+}
+.menu-item{ 
+    cursor: pointer;
+    transition: color 0.3s ease;
+}
+.menu-item:hover{
+    color: #050b12;
+}
+.menu-item.active{
+    color: #fff;
+    font-weight: bold;
+}
+.menu-item.active:hover{
+    color: #fff;
+}       
